# rules_s_p_m_rules_swift_cnio_compile_error_repro

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  Package.resolved  Package.swift  README.md  WORKSPACE  bazel-repro-nio-sandbox-build-issue  swift_deps_index.json
